# xtalsim

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
input/: config.json  config.xml  configTemplate.json  configTemplate.xml  easylogging++.conf  elements.json  elements.xml  interfaceConfig.xml  latticeConfig.xml  lgenOutput.xml  loggers.conf  materials.json  materials.xml  optimizerConfig.xml  tersoff.json  tersoff.xml
scripts/: ioutils.rb  settings.rb  xtalsim.rb  xtalsimcli.rb  xtalsimconfig.rb  xtalsimrun.rb
scripts/examples/: inas_gasb_structure.rb  settings.rb
src/: CMakeLists.txt  Doxyfile  SConstruct  compile_commands.json  projectConfigure.h.in  xtalsim.h
src/app/: CMakeLists.txt  Evaluator.cpp  Extractor.cpp  InterfaceGenerator.cpp  LatticeGenerator.cpp  Optimizer.cpp  Plot.cpp  SConscript  Visualize.cpp  doInAsGaSb.sh  ecalc.cpp  evalbonds.cpp  ref.cpp  test.cpp
src/doc/: Doxyfile  Doxyfile.in
src/easyloggingcpp/: CMakeLists.txt  easylogging++.cc  easylogging++.h  easylogging++Global.conf  easyloggingInternal.h
src/jsoncpp/: CMakeLists.txt  json-forwards.h  json.cpp  json.h
src/misc/: ArrheniusFactor.cpp  ArrheniusFactor.h  BondInfo.cpp  BondInfo.h  BondTool.cpp  BondTool.h  CMakeLists.txt  Color.cpp  Color.h  CompositionInfo.cpp  CompositionInfo.h  CompositionTool.cpp  CompositionTool.h  Configuration.cpp  Configuration.h  CsvHandler.cpp  CsvHandler.h  ErrorCode.h  FileHandler.h  Hash.cpp  Hash.h  InterfaceTool.cpp  InterfaceTool.h  Journal.cpp  Journal.h  Journal.inl  JsonHandler.cpp  JsonHandler.h  JsonHandler.inl  LayerStrainInfo.cpp  LayerStrainInfo.h  StrainTool.cpp  StrainTool.h  Tuples.h  XmlHandler.cpp  XmlHandler.h  XmlHandler.inl
src/physics/: Atom.cpp  Atom.h  AtomState.h  CMakeLists.txt  Element.cpp  Element.h  ExchangeReaction.cpp  ExchangeReaction.h  Field3D.cpp  Field3D.h  Field3D.inl  Lattice.cpp  Lattice.h  LatticeUtils.cpp  LatticeUtils.h  Material.cpp  Material.h  MaterialCollection.cpp  MaterialCollection.h  PeriodicTable.cpp  PeriodicTable.h  Range3D.h  Range3D.inl  SimulationBox.cpp  SimulationBox.h  Vector3D.cpp  Vector3D.h  Vector3D.inl
src/pugixml/: CMakeLists.txt  pugixml.cpp
src/simulation/: CMakeLists.txt  Optimization.cpp  Optimization.h  OptimizationParameter.cpp  OptimizationParameter.h  OptimizationStatistic.cpp  OptimizationStatistic.h  TersoffParameter.cpp  TersoffParameter.h  TersoffPotential.cpp  TersoffPotential.h
src/tclap/: Arg.h  CmdLine.h  CmdLineInterface.h  MultiArg.h  StdOutput.h
src/visualization/: CMakeLists.txt  DataSeries.cpp  DataSeries.h  HistogramPlot.cpp  HistogramPlot.h  SimulationBoxRenderer.cpp  SimulationBoxRenderer.h  VtkDefs.h  XYPlot.cpp  XYPlot.h
